tests/baselines/reference/asyncAwaitNestedClasses_es5(target=es2015).errors.txt
asyncAwaitNestedClasses_es5.ts(5,55): error TS2345: Argument of type 'null' is not assignable to parameter of type 'void | PromiseLike<void>'.


==== asyncAwaitNestedClasses_es5.ts (1 errors) ====
    // https://github.com/Microsoft/TypeScript/issues/20744
    class A {
        static B = class B {
            static func2(): Promise<void> {
                return new Promise((resolve) => { resolve(null); });
                                                          ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'void | PromiseLike<void>'.
            }
            static C = class C {
                static async func() {
                    await B.func2();
                }
            }
        }
    }
    
    A.B.C.func();